# flappy-cloud

./: .dev.vars-sample  .gitignore  Cargo.toml  LICENSE  README.md  package.json  wrangler.toml
src/: ai.rs  lib.rs
static/: game.js  index.html  site.webmanifest  styles.css
